fixed update message overlapping header

--- a/cravat/websubmit/websubmit.css
+++ b/cravat/websubmit/websubmit.css
@@ -8,7 +8,7 @@ body * {
     left: 0px; 
     font-size: 15px; 
     color: #000000;
-    z-index: 2;
+    z-index: 201;
     outline: none;
 }
 
@@ -195,7 +195,7 @@ button {
     position: fixed; 
     top: 0px; 
     width: 100%; 
-    z-index: 1; 
+    z-index: 200; 
     padding-bottom: 20px; 
     height: 74px; 
     background-color: white; 
